--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^1.1.5",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
